Fixed issue [#23992] Admin Bluestork template - Alignment of form text fields in IE7 (Ole Bang Ottosen, Bill Richardson).
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@20227 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/bluestork/css/ie7.css
+++ b/administrator/templates/bluestork/css/ie7.css
@@ -10,50 +10,97 @@
 /* IE7 OVERRIDES */
 
 input {
-	border-width: expression(this.type=="radio"?'0px':this.type=="checkbox"?'0px':'1px');
+	border-width: expression(this.type == "radio" ? '0px' : this.type == "checkbox" ?
+		'0px' : '1px');
+}
+
+/* Accessibility: css in template.css for slider keyboard
+ * has to be reversed here or the mouse does not work for ie */
+.pane-toggler + div {
+	display: block;
 }
 
 div.toolbar-box {
 	height: 65px;
 }
 
-.toolbar-box div.m {
-	height: 50px;
-}
-
 div.toolbar-list span {
 	margin: 0px;
-	position: relative;
+	position: relative
 }
 
 div.toolbar-list a {
 	position: relative;
 }
-div.pagetitle {
-	float: left;
-}
-#menu ul li.separator {
-	display:inline;
-}
-input, select, button {
-	font-size:1em;
+
+div#subheader {
+	height: 2em;
 }
 
-fieldset.adminform legend {
-	position: absolute;
-	float: left;
-	top: -0.6em;
-	left: 0.6em;
+#form-login .button_holder {
+/* width: 35%; */
+	}
+
+#login-page .pagetitle h2 {
+	margin: 0px;
+	padding: 0px;
 }
+
+*:first-child+html .clearfix {
+	min-height: 1px;
+}
+
+.menu-links li,
+.menu-links li label {
+	height: 2em;
+}
+
+div.article-edit,
+div.category-edit {
+	zoom: 1;
+}
+
+div.pane-sliders,
+div.panel,
+div.pane-slider,
+div.rules-section,
+div.mypanel,
+div.containerpg,
+div.pagination,
+div.upload-queue {
+	zoom: 1;
+}
+
 div.width-20 fieldset.adminform, div.width-30 fieldset.adminform, div.width-35 fieldset.adminform, div.width-40 fieldset.adminform, 
 div.width-45 fieldset.adminform, div.width-50 fieldset.adminform, div.width-55 fieldset.adminform, div.width-60 fieldset.adminform,
 div.width-65 fieldset.adminform, div.width-70 fieldset.adminform, div.width-80 fieldset.adminform, div.width-100 fieldset.adminform {
-	position: relative;
-	overflow: visible;
-	background-color:#FFFFFF;
-	padding:15px 17px 17px;
-	margin-top: 20px;
+	zoom: 1;
+	margin-bottom:10px;
 }
-.pane-sliders {
-	margin: 20px 0 0 0;
-}	
+
+div.toggle-editor {
+	margin-top: -5px;
+	margin-bottom: 5px;
+}
+
+table.adminlist {
+	border-bottom-width: 1px;
+}
+
+div.current dd {
+	width: 100%;
+	position: relative;
+}
+
+div.current ul.menu-links {
+	zoom: 1;
+	width: 25%;
+	margin: 0;
+	padding:0;
+	list-style-position: inside;
+}
+input.readonly {
+	
+	border: 0 !important;
+	
+}
